test/bad/empty1.pacc
/*
nopacc 4:1 'expected Defns'
*/
